File System Done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".onBoarding.OnBoardingActivity">
-        </activity>
+        <activity android:name=".view.FileSystemActivity"></activity>
+        <activity android:name=".onBoarding.OnBoardingActivity"></activity>
         <activity android:name=".view.BlogActivity" />
 
         <provider
