--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     //Viewpager
     implementation 'androidx.viewpager:viewpager:1.0.0'
 
+    //google-signIn
+    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
